--- a/Tablas.xaml
+++ b/Tablas.xaml
@@ -42,7 +42,7 @@
         </ListView>
 
         <TextBox Name="COMIDA" Grid.Row="2" Grid.Column="0" Margin="10,0,10,10"></TextBox>
-        <TextBox Name="CALORIAS" Grid.Row="2" Grid.Column="1" Margin="0,0,98,10"></TextBox>
+        <TextBox Name="CALORIAS" PreviewTextInput="esNumero" Grid.Row="2" Grid.Column="1" Margin="0,0,98,10"></TextBox>
         <Button Content="Añadir Comida" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Click="AnadirComida_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
 
