--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -38,6 +38,8 @@
         </Menu>
 
         <Button Content="Ver Gráfica Global" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Click="VerTodo_Click" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button Content="Dch" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonDch_Click"  Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button Content="Izq" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonIzq_Click" Grid.Column="2" Margin="0,7,30,5"/>
 
         <Viewbox x:Name="ViewBox" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,0,0,-19" IsHitTestVisible="False" >
             <Grid>
