--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dieta"
         mc:Ignorable="d"
-        Title="Dieta" Height="450" Width="800">
+        Title="Dieta" Height="450" Width="800" MinHeight="450" MinWidth="800">
 
 
     <Grid>
@@ -37,9 +37,11 @@
             </MenuItem>
         </Menu>
 
-        <Button Content="Ver Gráfica Global" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Click="VerTodo_Click" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Button Content="Dch" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonDch_Click"  Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Button Content="Izq" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonIzq_Click" Grid.Column="2" Margin="0,7,30,5"/>
+        <Button Content="Ver Gráfica Día" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Click="VerTodo_Click" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button x:Name="DchComidas" IsEnabled="False" Visibility="Visible" Content="Dch" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonDchComidas_Click"  Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button x:Name="IzqComidas" IsEnabled="False" Visibility="Visible" Content="Izq" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonIzqComidas_Click" Grid.Column="2" Margin="0,7,30,5"/>
+        <Button x:Name="DchDias" IsEnabled="True" Visibility="Visible" Content="Dch" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonDchDias_Click"  Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button x:Name="IzqDias" IsEnabled="True" Visibility="Visible" Content="Izq" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="BotonIzqDias_Click" Grid.Column="2" Margin="0,7,30,5"/>
 
         <Viewbox x:Name="ViewBox" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,0,0,-19" IsHitTestVisible="False" >
             <Grid>
