--- a/Tablas.xaml
+++ b/Tablas.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Dieta"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="600"
+      Height="450" Width="450" MinHeight="450" MinWidth="450"
       Title="Tablas"
       Closing="Window_Closing">
 
@@ -23,7 +23,7 @@
 
         <DatePicker Name="dp"  Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10,0,10"/>
 
-        <Button Content="Crear tabla" Grid.Column="1" HorizontalAlignment="Right" Click="CrearTabla_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
+        <Button Content="Añadir fecha" Grid.Column="1" HorizontalAlignment="Right" Click="AnadirFecha_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
         <ListView Name="listaFecha" Grid.Row="1" Grid.ColumnSpan="2" SelectionChanged="listaFecha_SelectionChanged"
                   ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Margin="10,10,10,20">
@@ -33,19 +33,24 @@
                     <GridViewColumn Header="TOTAL CALORÍAS" DisplayMemberBinding="{Binding totalCalorias}"></GridViewColumn>
                 </GridView>
             </ListView.View>
-            
+
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Eliminar" Click="EliminarFecha_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
-            
+
         </ListView>
 
-        <TextBox Name="COMIDA" Grid.Row="2" Grid.Column="0" Margin="10,0,10,10"></TextBox>
-        <TextBox Name="CALORIAS" PreviewTextInput="esNumero" Grid.Row="2" Grid.Column="1" Margin="0,0,98,10"></TextBox>
-        <Button Content="Añadir Comida" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Click="AnadirComida_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
+
+        <TextBox Name="COMIDA" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="10,0,10,10" TextChanged="COMIDA_TextChanged"></TextBox>
+        <TextBlock Name="COMIDA_HINT" FontSize="16" Visibility="Visible" Grid.Row="2" Grid.Column="0" Margin="17,6,10,10" Text="Comida..." Foreground="LightSteelBlue" IsHitTestVisible="False" ></TextBlock>
+
+        <TextBox Name="CALORIAS" FontSize="16" PreviewTextInput="esNumero" Grid.Row="2" Grid.Column="1" Margin="0,0,98,10" TextChanged="CALORIAS_TextChanged"></TextBox>
+        <TextBlock Name="CALORIAS_HINT" FontSize="16" Visibility="Visible" Grid.Row="2" Grid.Column="1" Margin="10,6,98,10" Text="Calorías..." Foreground="LightSteelBlue" IsHitTestVisible="False" ></TextBlock>
+
+        <Button Content="Añadir Comida" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Click="AnadirComida_Click" RenderTransformOrigin="0.045,0.591" Margin="0,4,9,16"/>
 
         <ListView Name="listaDia" Grid.Row="3" Grid.ColumnSpan="2"
                   ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Margin="10">
@@ -61,7 +66,7 @@
                     <MenuItem Header="Eliminar" Click="EliminarComida_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
-            
+
         </ListView>
 
 
