Limpiar gráficos entrada + nueva tabla  y cargar tabla con mensajes y cierre de ventanas

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,6 +29,7 @@
             </Menu.ItemsPanel>
 
             <MenuItem Header="Tablas">
+                <MenuItem Header="Nueva Tabla" Click="NuevaTabla_Click"/>
                 <MenuItem Header="Ver Tablas" Click="VerTablas_Click"/>
                 <MenuItem Header="Guardar Tablas" Click="GuardarTablas_Click"/>
                 <MenuItem Header="Guardar Tablas Como..." Click="GuardarTablasComo_Click"/>
